--- a/app/src/main/res/layout/example_item.xml
+++ b/app/src/main/res/layout/example_item.xml
@@ -4,14 +4,14 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="8dp"
-        android:clipToPadding="true">
+        android:layout_height="wrap_content"
+        android:clipToPadding="true"
+        android:padding="8dp">
 
         <ImageView
             android:id="@+id/image_view"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:src="@drawable/ic_baseline_emoji_emotions_24" />
 
@@ -44,15 +44,6 @@
             android:text="Description"
             android:textColor="@android:color/holo_red_dark"
             android:textSize="15sp" />
-
-<!--        <Button-->
-<!--            android:id="@+id/delete_button"-->
-<!--            android:backgroundTint="#db402c"-->
-<!--            android:text="Delete"-->
-<!--            android:layout_width="100sp"-->
-<!--            android:layout_height="50sp"-->
-<!--            android:layout_alignRight="@id/text_view_3"-->
-<!--            />-->
 
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
