--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,26 @@
     <LinearLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:clipToPadding="true"
         android:padding="4dp"
-        android:background="@color/black">
+        android:background="@color/black"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableTint="#982E2E"
+            android:fontFamily="sans-serif-smallcaps"
+            android:foregroundTint="#000000"
+            android:gravity="center"
+            android:padding="1dp"
+            android:text="Time Manager App!"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="#EF5348"
+            android:textSize="36sp"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="match_parent"
@@ -29,15 +45,17 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
-        android:padding="4dp"
-        android:clipToPadding="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/buttons"
         android:layout_below="@+id/header"
+        android:layout_marginTop="-2dp"
+        android:layout_marginBottom="2dp"
+        android:background="#400F0F"
+        android:clipToPadding="true"
+        android:padding="4dp"
         android:scrollbars="vertical"
-        tools:listitem="@layout/example_item"/>
-
+        tools:listitem="@layout/example_item" />
 
     <LinearLayout
         android:id="@+id/buttons"
@@ -46,12 +64,18 @@
         android:layout_alignParentBottom="true"
         android:clipToPadding="true"
         android:padding="4dp">
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:backgroundTint="#913F3F"
+            android:fontFamily="@font/abril_fatface"
             android:onClick="insertItem"
-            android:text="Add Task" />
+            android:text="Add Task"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+
     </LinearLayout>
 
 </RelativeLayout>
